--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "deep-translator>=1.11.4",
     "quixstreams>=3.16.0",
     "scikit-learn>=1.7.0",
+    "sqlmodel>=0.0.24",
     "torch==2.6",
     "transformers[torch]>=4.52.4",
 ]
